--- a/style.css
+++ b/style.css
@@ -23,8 +23,10 @@
 .left>.inp{
     padding: 5px;
     align-items: center;
+    font-size: 20px;
 }
 .inp>.srch{
+    padding: 10px;
     color: #ffffff;
     background: #000;
 }
@@ -49,12 +51,12 @@
 }
 
 .inp>button{
-    padding-top: 7px;
+    padding-top: 10px;
     padding-right: 25px;
     padding-left: 22px;
-    padding-bottom: 7px;
+    padding-bottom: 12px;
     border: 1px solid black;
-    border-radius: 20px;
+    border-radius: 25px;
     font-size: 18px;
     font-weight: 400;
     color: #ffffff;
@@ -73,4 +75,17 @@
     text-align: center;
     align-items: center;
     justify-content: center;
+}
+.display>.crd{
+    margin-top: 10px;
+    margin-left: 0.2px;
+}
+/* Right CSS */
+.right{
+    padding: 10px;
+    padding-left: 20px;
+    margin-left: 2px;
+}
+.right>.hourly{
+    padding: 20px;
 }
