--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     /* background-color: #23263f; */
-    border: 1px solid red;  
+    /* border: 1px solid red; */
 }
 
 .part{
@@ -83,7 +83,7 @@
 /* Right CSS */
 .right{
     padding: 10px;
-    padding-left: 20px;
+    padding-left: 30px;
     margin-left: 2px;
 }
 .right>.hourly{
@@ -98,33 +98,45 @@
     padding-bottom: 20px;
     display: flex;
     overflow-x: scroll;
-    /* flex-wrap:wrap; */
-    border: 1px solid black;
+    /* border: 1px solid black; */
 }
 .cd{
     width: max-content;
     padding: 10px;
     margin-right: 5px;
 }
-/* Scrollbar ki width */
+
 ::-webkit-scrollbar{
   width: 8px;
   height: 8px;
 }
-
-/* Scrollbar ka background (rail) */
 ::-webkit-scrollbar-track{
   background: #f1f1f1;
   border-radius: 10px;
 }
-
-/* Scrollbar ki moving bar */
 ::-webkit-scrollbar-thumb{
   background: #444;
   border-radius: 4px;
 }
-
-/* Jab cursor upar ho */
 ::-webkit-scrollbar-thumb:hover{
   background: #000;
+}
+
+.right>.forecast{
+    padding: 20px;
+}
+.forecast>#box1{
+    margin-top: 20px;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    display: flex;
+    overflow-x: scroll;
+    /* border: 1px solid black; */
+}
+#box1>.cd{
+    width: max-content;
+    padding: 10px;
+    margin-right: 5px;
 }
