--- a/style.css
+++ b/style.css
@@ -80,25 +80,35 @@
     margin-top: 10px;
     margin-left: 0.2px;
 }
+
+.card>h3{
+    padding-left: 25px;
+}
 /* Right CSS */
 .right{
     padding: 10px;
-    padding-left: 30px;
+    padding-left: 60px;
     margin-left: 2px;
 }
 .right>.hourly{
+    height: 240px;
+    margin-bottom: 20px;
+    margin-top: 10px;
     padding: 20px;
+    padding-bottom: 0px;
+    border: 1px solid black;
+    border-radius: 12px;
+    color: #ffffff;
+    background: #000;
 }
 /* Hourly Container */
 .hourly>#box{
-    margin-top: 20px;
     padding-left: 10px;
     padding-right: 10px;
-    padding-top: 20px;
-    padding-bottom: 20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
     display: flex;
     overflow-x: scroll;
-    /* border: 1px solid black; */
 }
 .cd{
     width: max-content;
@@ -107,7 +117,7 @@
 }
 
 ::-webkit-scrollbar{
-  width: 8px;
+  width: 1px;
   height: 8px;
 }
 ::-webkit-scrollbar-track{
@@ -115,25 +125,28 @@
   border-radius: 10px;
 }
 ::-webkit-scrollbar-thumb{
-  background: #444;
+  background: #565656;
   border-radius: 4px;
 }
 ::-webkit-scrollbar-thumb:hover{
-  background: #000;
+  background: #9f9f9f;
 }
 
 .right>.forecast{
+    height: 270px;
     padding: 20px;
+    border: 1px solid black;
+    border-radius: 12px;
+    color: #ffffff;
+    background: #000;
 }
 .forecast>#box1{
-    margin-top: 20px;
     padding-left: 10px;
     padding-right: 10px;
-    padding-top: 20px;
+    padding-top: 10px;
     padding-bottom: 20px;
     display: flex;
     overflow-x: scroll;
-    /* border: 1px solid black; */
 }
 #box1>.cd{
     width: max-content;
